<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.spaceinvaders.GameActivity">

    <ImageView
        android:id="@+id/fondo_juego"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/banner_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="#ac4587ca">

            <TextView
                android:id="@+id/ptos_vida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="0"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/heart_6"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="1dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/vcorazonizq" />

                <ImageView
                    android:id="@+id/heart_5"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="2dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/vcorazonder" />

                <ImageView
                    android:id="@+id/heart_4"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="1dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/vcorazonizq" />

                <ImageView
                    android:id="@+id/heart_3"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="2dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/vcorazonder" />

                <ImageView
                    android:id="@+id/heart_2"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="1dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/vcorazonizq" />

                <ImageView
                    android:id="@+id/heart_1"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/vcorazonder" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12">

            <Button
                android:id="@+id/disparo"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:onClick="dispara"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/nave"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:src="@drawable/diseno11" />

            <Button
                android:id="@+id/control_izquierda"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:background="@android:color/transparent"
                android:visibility="visible" />

            <Button
                android:id="@+id/control_derecha"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/municion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/municion"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/tablero_enemigo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/matriz_enemigos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/fila_1_enemigos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/enemigo1"
                                android:layout_width="65dp"
                                android:layout_height="65dp"
                                android:adjustViewBounds="true"
                                android:src="@drawable/enemigodiseno11" />

                            <ImageView
                                android:id="@+id/enemigo2"
                                android:layout_width="65dp"
                                android:layout_height="65dp"
                                android:layout_centerHorizontal="true"
                                android:adjustViewBounds="true"
                                android:src="@drawable/enemigodiseno11" />

                            <ImageView
                                android:id="@+id/enemigo3"
                                android:layout_width="65dp"
                                android:layout_height="65dp"
                                android:layout_centerHorizontal="true"
                                android:adjustViewBounds="true"
                                android:src="@drawable/enemigodiseno11" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/fila_2_enemigos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/enemigo4"
                                android:layout_width="65dp"
                                android:layout_height="65dp"
                                android:adjustViewBounds="true"
                                android:src="@drawable/enemigodiseno11" />

                            <ImageView
                                android:id="@+id/enemigo5"
                                android:layout_width="65dp"
                                android:layout_height="65dp"
                                android:layout_centerHorizontal="true"
                                android:adjustViewBounds="true"
                                android:src="@drawable/enemigodiseno11" />

                            <ImageView
                                android:id="@+id/enemigo6"
                                android:layout_width="65dp"
                                android:layout_height="65dp"
                                android:layout_centerHorizontal="true"
                                android:adjustViewBounds="true"
                                android:src="@drawable/enemigodiseno11" />

                        </LinearLayout>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tablero_aliado"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/asteroides_seccion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <ImageView
                                android:id="@+id/asteroide_1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/zobjectasteroie" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <ImageView
                                android:id="@+id/asteroide_2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/zobjectasteroie" />

                        </RelativeLayout>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pantalla_game_over"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ba5f7efa"
        android:visibility="gone">

        <ImageView
            android:id="@+id/titulo_game_over"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/gameovertitutlo" />

        <TextView
            android:id="@+id/puntuacion_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titulo_game_over"
            android:layout_centerHorizontal="true"
            android:text="Puntuación: "
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/return_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:onClick="volverMenuPrincipal"
            android:scaleType="centerCrop"
            android:src="@drawable/movetonext" />

    </RelativeLayout>

</RelativeLayout>
